[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/Sprite Sheets/enemies-16col-sheet-alpha (1).png" type="Texture" id=1]
[ext_resource path="res://Enemies/Explosive.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.25, 11.5 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 26, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 52, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 78, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 104, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 130, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 156, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 182, 0, 26, 26 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 231, 12.5 )

[node name="Explosive" type="KinematicBody2D"]
light_mask = 2
z_index = -1
collision_layer = 520
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -1, -1 )
frames = SubResource( 3 )
animation = "walk"
frame = 4
speed_scale = 2.0

[node name="VisionArea" type="Area2D" parent="."]
position = Vector2( -1, 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionArea"]
position = Vector2( 0, -13 )
shape = SubResource( 11 )

[node name="RayCast2DLeftFloor" type="RayCast2D" parent="."]
position = Vector2( -10, -12 )
enabled = true
cast_to = Vector2( 0, 30 )
collision_mask = 9

[node name="RayCast2DRightFloor" type="RayCast2D" parent="."]
position = Vector2( 10, -12 )
enabled = true
cast_to = Vector2( 0, 30 )
collision_mask = 9

[node name="RayCast2DLeftWalls" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -232, 0 )

[node name="RayCast2DRightWalls" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 230, 0 )
